# gds-axelrod

./: .gitignore  LICENSE  README.md  visual_layout.md
.github/workflows/: deploy.yml
pipeline/: games.py  gen_formal.py  gen_nash.py  gen_psuu.py  gen_sim.py  gen_tournament_spec.py  gen_viz.py  generate.py  pyproject.toml  strategies.py  tournament.py
site/: formal.html  index.html  nash.html  package-lock.json  package.json  psuu.html  sim.html  vite.config.js  viz.html
site/public/data/: chapter1_dilemma.json  chapter2_tournament.json  chapter3_evolution.json  chapter4_noise.json  chapter5_shadow.json  formal.json  nash_analysis.json  pattern_ir.json  psuu_results.json  sim_results.json  strategies.json  tournament_spec.json  viz_diagrams.json
site/public/pyodide/: psuu_runner.py  sim_runner.py
site/src/: ecosystem-note.js  formal.js  main.js  nash-page.js  nav.js  pages.css  psuu-page.js  sim-page.js  style.css  viz-page.js
site/src/chapters/: ch-appendix.js  ch1-dilemma.js  ch2-tournament.js  ch3-evolution.js  ch4-noise.js  ch5-shadow.js  ch6-sim.js
site/src/data/: loader.js
site/src/petri/: agents.js  controls.js  dish.js  evolution.js
site/src/viz/: charts.js  game-tree.js  payoff.js
site/src/workers/: psuu-worker.js  sim-worker.js
