[project]
name = "gds-axelrod-pipeline"
version = "0.1.0"
description = "Data generation pipeline for gds-axelrod interactive site"
requires-python = ">=3.12"
dependencies = [
    "gds-games>=0.3.0",
    "gds-framework>=0.3.0",
    "gds-viz>=0.1.0",
    "gds-sim>=0.1.0",
    "gds-psuu>=0.1.0",
    "nashpy>=0.0.41",
    "numpy>=1.26",
]
